fix: hide carousel overflow by default

--- a/blocks/card-carousel/card-carousel.css
+++ b/blocks/card-carousel/card-carousel.css
@@ -5,7 +5,7 @@
 }
 
 .card-carousel .splide__track {
-  overflow: visible;
+  overflow: hidden;
 }
 
 .card-carousel .card {
